Bug 137438 - LibreOffice Impress doesn't display text when it's text transparency is 100% in MS Office.
Summary: LibreOffice Impress doesn't display text when it's text transparency is 100% ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.1.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
: 146979 (view as bug list)
Depends on:
Blocks: PPTX-Texteffect 118776
  Show dependency treegraph
 
Reported: 2020-10-13 04:11 UTC by WooChul Jung
Modified: 2023-11-27 10:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Some text is not shown in LibreOffice Impress, when it is created by MS Office. (92.49 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-10-13 04:13 UTC, WooChul Jung
Details
PPTX compared MSO 2016 LO 7.1+ (77.41 KB, image/png)
2020-10-13 13:49 UTC, Timur
Details
secretB.pptx: testing various transparencies, as well as a uLn (underline) (31.38 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-11-12 13:06 UTC, Justin L
Details
secretB.pdf: how the slide looks in PPT 2016 (where it was created) (199.20 KB, application/pdf)
2021-11-12 13:15 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description WooChul Jung 2020-10-13 04:11:17 UTC
Description:
When I set the transparency as 100% in 'Text Option' -> 'Text Contour'in MS Office, then those text is not shown in LibreOffice Impress.

Steps to Reproduce:
In MS office,
1. Draw Rectangle box
2. Input any text in rectangle box
3. Set Text Transparency as 100% in 'Text Option' -> 'Text Contour'

Actual Results:
Those text isn't shown in LibreOffice Impress.

Expected Results:
Those text should be shown like MS Office.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.1.2 (x64)
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: ko-KR (ko_KR); UI: ko-KR
Calc: threaded
Comment 1 WooChul Jung 2020-10-13 04:13:19 UTC
Created attachment 166330 [details]
Some text is not shown in LibreOffice Impress, when it is created by MS Office.
Comment 2 Timur 2020-10-13 13:49:35 UTC
Created attachment 166347 [details]
PPTX compared MSO 2016 LO 7.1+

No repro 6.4. Repro LO 7.0 and 7.1+. Regression.
It's Text Outline Transparency in MSO.
Comment 3 Timur 2020-10-13 14:02:17 UTC
Bibisect LO 7.0:

commit 2bf3555f3c62dd5832522bcd580fc9137f579196
Date:   Thu Nov 21 22:08:43 2019 +0100

    source 1e64d9ebaa231caef5fb062009b8f76465e415f4
    previous source 122e2e0296d5060a2631867527817893f41384c4

author	Miklos Vajna <vmiklos@collabora.com>	2019-11-21 17:53:35 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2019-11-21 22:03:04 +0100
commit 1e64d9ebaa231caef5fb062009b8f76465e415f4 (patch)
tree 041a9f5ff51384203fca791fe52c4fb4b05c9f8b
parent 122e2e0296d5060a2631867527817893f41384c4 (diff)
oox: add PPTX import/export for semi-transparent shape text
And start a drawingml test suite in oox, so the test and the tested code
is close to each other (just like how it's done in chart2/ already).

CC: Miklos. Please see.
Comment 4 WooChul Jung 2020-11-18 01:57:41 UTC
Dear.

May I ask you whether you have a plan to fix this problem ?
Comment 5 Miklos Vajna 2020-11-18 07:44:21 UTC
Yes, I plan to, unless somebody else is faster to look at this. However, I'm not short on problems right now. So if you need this urgently, please see <https://www.libreoffice.org/get-help/professional-support/>, thanks.
Comment 6 Justin L 2021-11-12 07:05:34 UTC
LibreOffice doesn't have a concept of text outline AFAICS. So it needs to merge the text-fill with the outline-fill in a meaningful way.

Here is what I think needs to happen.
-when importing a:ln (text outline), then the colour should only be applied to the text only if the line transparency is greater than the text transparency.
-that will be a little tricky if the colour is inherited from a style.

oox/source/drawingml/textcharacterpropertiescontext.cxx
// TODO unsupported yet
//      case A_TOKEN( ln ):         // CT_LineProperties
Comment 7 Justin L 2021-11-12 13:06:56 UTC
Created attachment 176207 [details]
secretB.pptx: testing various transparencies, as well as a uLn (underline)

The hand-created uLn part seems to be skipped (even when I uncomment it in the code) and does nothing in PowerPoint 2016. Perhaps I did it wrong.
Comment 8 Justin L 2021-11-12 13:15:03 UTC
Created attachment 176209 [details]
secretB.pdf: how the slide looks in PPT 2016 (where it was created)
Comment 9 Commit Notification 2021-11-19 12:50:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/894a01640a838c9affed7cccccc7378a452139b5

tdf#137438 drawingml: separate outline from text import

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gabor Kelemen (Collabora) 2023-11-27 10:32:39 UTC
*** Bug 146979 has been marked as a duplicate of this bug. ***