tdf#137438 drawingml: separate outline from text import

By ignoring the a:ln group, the contents in that group
(like transparency) were being applied to the text.
Well, it should only apply to a line around the text,
which LO isn't doing.
[Well, LO can do this as Fontwork, but perhaps that
doesn't match so well with text in shapes generally?]

At any rate, don't allow one group's settings
to override the others. Keep them separate and then apply
a bit of merging logic to try to achieve the best look.

So emulate a little bit. If the outline is not very
transparent (less transparent than the main text)
then it may (if thick or opaque enough) dominate
the text.

For simplicity (and because there is no right answer overall)
I just compared transparency and used the more opaque colour.

Unit tests potentially affected:
-export-tests-ooxml1.cxx: tdf100348_FontworkBitmapFill.odp -> PPTX
   -now imports black instead of yellow (MSO sees gradient colors)
   -so previously completely wrong, and now perhaps even more wrong?
-export-tests-ooxml3.cxx: tdf114848.pptx
   -shows blue text regardless - defined by area.
   -can't see where this is set in MSO2016. Perhaps illegal?
-  : tdf125573_FontWorkScaleX.pptx
   -no visual difference. Same as tdf100348, but with black outline.
-  : tdf119087.pptx
   -should be green, not purple. [Added test for that.]
-  : tdf143315-WordartWithoutBullet.ppt
   -no visual difference (COL_AUTO outline?)
-import-tests2.cxx: tdf129686.pptx
   -poor test usage (but also weird transparent default).
   -no visual change.
-ooxmlimport2.cx: tdf143476_lockedCanvas_position.docx
   -no visual difference. Irrelevant since we can't RT

Change-Id: Iff0d95506dd64825444a99e62a6c2bd5e1dc122f